# collective-encoder

./: .gitattributes  .gitignore  .gitmodules  README.md  __init__.py  analysis.ipynb  ce_dataloaders.py  ce_nets.py  config.yaml  engine.py  example_run.sh  example_run_grpah.sh  example_run_multi.sh  example_run_slurm.sh  plotter.ipynb  pyproject.toml  requirements.txt  run_multi.sh  run_slurm.sh  setup.py  utils.py
AE/: AE.py  AE_encode.py  AE_loss.py  AE_nn.py  AE_plot.py
VAE/: VAE.py  VAE_dataset.py  VAE_encode.py  VAE_loss.py  VAE_nn.py  VAE_plot.py
VAE/MDsampler/: MDLoss.py  utils_peptide_torch.py
collective_encoder/: __init__.py  cli.py  config.py  engine.py  prepare_dmod.py  tester.py  trainer.py  utils.py
collective_encoder/common/: __init__.py  config_check.py  module.py
collective_encoder/config/: debug.yaml  defaults.yaml
collective_encoder/dataanalysers/: __init__.py  ala2.py  base.py  resolver.py
collective_encoder/datalabelers/: __init__.py  base.py  column_selector.py  coordination.py  dihedral.py  distance.py  dummy.py  resolver.py
collective_encoder/dataloaders/: __init__.py  colvar_dataloader.py  default.py  kmc_dataloader.py  resolver.py
collective_encoder/datamodules/: __init__.py  base.py  colvars.py  coordinates.py  default.py  resolver.py
collective_encoder/datareaders/: __init__.py  base.py  plumed_output.py  resolver.py  trajectory.py  xtc.py  xtc_chunks.py  xtc_chunks_cg.py  xtc_chunks_cg_pp.py
collective_encoder/datasets/: __init__.py  base.py  bondgraph.py  bondgraph_latent.py  colvar.py  distances.py  positions.py  resolver.py  soap.py  soap_ps.py
collective_encoder/labels/: __init__.py  base.py  column_selector.py  coordination.py  dihedral.py  distance.py  dummy.py  resolver.py
collective_encoder/mtomic/: __init__.py  inspect_torchscript.ipynb
collective_encoder/nets/: __init__.py  ae_base.py  ae_net.py  base.py  bge.py  bge_v2.py  dvae_net.py  edvae_gan_net.py  edvae_net.py  gmvae_net.py  resolver.py  vae_cnn_gan_net.py  vae_cnn_net.py  vae_mse_cnn_net.py  vae_net.py
collective_encoder/plotters/: __init__.py  ala2.py  latent_space_plotter.py
common/: module.py
dataloaders/: colvar_dataloader.py  default.py  kmc_dataloader.py  md17_dataloader.py  xtc_dataloader.py  xyz_dataloader.py
datareaders/: solver.py  xtc.py  xtc_chunks.py  xtc_chunks_cg.py
datasets/: base.py  bondgraph.py  distances.py  distances_dataset.py  graph.py  positions.py  soap.py  soap_ps.py  solver.py
examples/: README.md
examples/ala2_tutorial/: README.md  (+2 more)
labels/: base.py  coordination.py  dihedral.py  distance.py  solver.py
metatomic/: wrapper.py
mtomic/: wrapper.py
nets/: ae_base.py  ae_net.py  bge.py  bge_v2.py  dvae_net.py  edvae_gan_net.py  edvae_net.py  gan_net.py  gmvae_net.py  gmvae_utils.py  gnn_encoder.py  vae_cnn_gan_net.py  vae_cnn_net.py  vae_gan_net.py  vae_mse_cnn_net.py  vae_mse_net.py  vae_net.py  vae_simple_net.py
plotters/: ala2.py  latent_space_plotter.py
(+24 files in other folders)
